<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Laboratorio04</string>
    <string name="bem_vindo">Bem vindo ao Android!</string>
    <string name="action_settings">Settings</string>
    <string name="desenvolvido">Desenvolvido por Mauro Silva</string>
    <string name="botao_ok">OK</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="dica_acesso">Usuário</string>
    <string name="dica_senha">Senha</string>

</resources>
